@@ -1,3 +1,7 @@
+2007-01-19  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_FamilyList.py: remove loop
+	* src/PageView.py: check for null model
+
 2007-01-19  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsDb/_GrampsInMemDB.py: Support the cached surname list.
 	* src/GrampsDb/_GrampsBSDDB.py: Support the cached surname list.
